# dscoding

./: .gitignore  README.md  blackboard.ipynb
AA-2022-23/: blackboard.ipynb  exercises.ipynb
AA-2022-23/classification/: recipes.ipynb
AA-2022-23/clustering/: algorithms.py
AA-2022-23/wordgen/: dummy.ipynb  index.py
AA-2023-24/bikes/: requirements.ipynb  test.html
AA-2023-24/bikes/bike/: pyproject.toml
AA-2023-24/blackjack/: blackjack.ipynb  demo.py  numpy-examples.ipynb  pyproject.toml
AA-2023-24/blackjack/blackjack/: deck.py  game.py  utils.py
AA-2023-24/dbms/: playground.ipynb
AA-2023-24/kmeans/: boardgames.ipynb  sklearn-example.ipynb
AA-2023-24/kmeans/clustering/: pyproject.toml
clustering/: airbnb-example.ipynb  algorithms.py  kmeans-from-scratch.ipynb  sklearn-evaluation.ipynb
tutorials/01_variables_and_data_types/: 01_variables_and_data_types.ipynb  email_generator.ipynb
tutorials/02_basic_data_structures/: 02_basic_data_structures.ipynb
tutorials/03_conditionals/: 03_conditionals.ipynb  grade_book.ipynb
tutorials/04_loops/: 04_loops.ipynb  binary2decimal.ipynb  decimal2binary.ipynb  guess_the_number.ipynb  sum_of_squares.ipynb  tower_builder.ipynb
tutorials/05_functions/: 05_functions.ipynb  password_generator.ipynb
tutorials/06_object_oriented_programming/: 06_object_oriented_programming.ipynb  calculator.ipynb  rock_paper_scissors.ipynb  tic_tac_toe.ipynb
tutorials/07_error_handling/: 07_error_handling.ipynb  hamming_distance.ipynb
wordgen/: corpora.ipynb  dummy.ipynb  index.py  models.py
(+4 files in other folders)
